--- a/secciones/orders.html
+++ b/secciones/orders.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/tienda.css">
     <link rel="icon" href="../img/icono.jpg">
     <title>Orders</title>
@@ -12,33 +13,35 @@
 
 <body>
     <header class="encabezado">
-        <h1 class="encabezado__title fontText">Store Pc</h1>
+        <h1 class="encabezado__title fontPage">Store Pc</h1>
     </header>
 
-    <nav class="nav-container back-color">
-        <ul class="nav__ul-container">
-            <li class="nav__li">
-                <a class="nav__li-a" href="../index.html">Home</a>
-            </li>
-
-            <li class="nav__li">
-                <a class="nav__li-a" href="Products.html">Products</a>
-            </li>
-
-            <li class="nav__li">
-                <a class="nav__li-a" href="giftCard.html">Gift Card's</a>
-            </li>
-
-            <li class="nav__li">
-                <a class="nav__li-a" href="funkoWorld.html">Funko World</a>
-            </li>
-
-            <li class="nav__li">
-                <a class="nav__li-a" href="orders.html">Orders</a>
-            </li>
-
-        </ul>
-    </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">
+            <img class="iconos" src="../img/inicio.png" alt="">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="Products.html">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="giftCard.html">Gift Card's</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="funkoWorld.html">Funko World</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" href="orders.html">Orders</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <main class="main-products">
         <form action="#" class="orders">
             <input type="text" placeholder="Ingrese su nombre" class="input-order border">
@@ -107,6 +110,8 @@
         </div>
 
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
