--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="encabezado">
-             <h1 class="encabezado__title fontPage">Store Pc</h1>
+             <h1 class="title fontPage">Store Pc</h1>
     </header>
     
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -46,7 +46,7 @@
 
     <main>
         <section class="info back-color">
-            <div class="nosotros-container">
+            <div>
                 <h2 class="subtt fontTittle">nosotros</h2>
                 <p class="nosotros__p fontText">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam et qui quos eligendi maiores
