--- a/secciones/funkoWorld.html
+++ b/secciones/funkoWorld.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="encabezado">
-        <h1 class="encabezado__title fontPage">Store Pc</h1>
+        <h1 class="title fontPage">Store Pc</h1>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
