--- a/secciones/Products.html
+++ b/secciones/Products.html
@@ -13,7 +13,7 @@
 
 <body>
     <header class="encabezado">
-        <h1 class="title fontPage">Store Pc</h1>
+        <h1 class="title">Store Pc</h1>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -43,18 +43,19 @@
         </div>
         </nav>
         <div>
-            <div class="funko-banner ">
-                <img class="products__foto" src="../img/zonegaming.jpg" alt="">
+            <div class="global-banner ">
+                <img class="global-foto" src="../img/zonegaming.jpg" alt="">
             </div>
-            <h1 class="funkoWorld-title fontTittle back-color ">Products</h1>
-         </div>
+           
+            <h2 class="global-title ">Products</h2>
+ 
 
     <main class="main-products">
         
 
-          <div class="back-color caro">
+          <div class="caro">
             <div id="carouselExampleIndicators" class="carousel slide " data-bs-ride="carousel">
-                <h2 class="title-marvel fontPage">Componentes</h2>
+                <h2 class="titleProduct-global">Componentes</h2>
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -84,7 +85,7 @@
 
 
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <h2 class="title-kimet fontPage">Perisfericos</h2>
+                <h2 class="titleProduct-global">Perisfericos</h2>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="../img/teclado.jpg" class="d-block ofoto w-100" alt="...">
@@ -107,13 +108,13 @@
               </div>  
             </div>
     </main>
-    <footer class="back-color">
+    <footer>
         <div class="sociales">
             <img src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" alt="icon instagram">
 
             <img src="https://img.icons8.com/fluency/48/undefined/twitter.png" />
         </div>
-        <p class="fontCopy copyr">©2022 StorePC</p>
+        <p class="copyr">©2022 StorePC</p>
         <div>
             <img class="pago" src="https://img.icons8.com/fluency/48/000000/paypal.png">
 
