--- a/secciones/giftCard.html
+++ b/secciones/giftCard.html
@@ -23,7 +23,7 @@
 
 <body>
     <header class="encabezado">
-        <h1 class="title fontPage">Store Pc</h1>
+        <h1 class="title">Store Pc</h1>
     </header>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -53,17 +53,17 @@
         </div>
       </nav>
       <div>
-        <div class="funko-banner ">
-            <img class="products__foto" src="../img/gift.jpg" alt="">
+        <div class="global-banner ">
+            <img class="global-foto" src="../img/gift.jpg" alt="">
         </div>
-        <h1 class="funkoWorld-title fontTittle back-color ">Gift Card</h1>
-    </div>
+        <h2 class="global-title">Gift Card</h2>
+
 
     <main class="main-products">
 
-        <div class="back-color caro">
+        <div class="caro">
             <div id="carouselExampleIndicators" class="carousel slide " data-bs-ride="carousel">
-                <h2 class="title-marvel fontPage">Valorant</h2>
+                <h2 class="titleProduct-global">Valorant</h2>
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -91,7 +91,7 @@
               </div>
               
               <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
-                <h2 class="title-kimet fontPage">League of Leyends</h2>
+                <h2 class="titleProduct-global">League of Leyends</h2>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img src="../img/league.jpg" class="d-block ofoto w-100" alt="...">
@@ -115,13 +115,13 @@
             </div>
    
     </main>
-    <footer class="back-color">
+    <footer>
         <div class="sociales">
             <img src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" alt="icon instagram">
 
             <img src="https://img.icons8.com/fluency/48/undefined/twitter.png" />
         </div>
-        <p class="fontCopy copyr">©2022 StorePC</p>
+        <p class="copyr">©2022 StorePC</p>
         <div>
             <img class="pago" src="https://img.icons8.com/fluency/48/000000/paypal.png">
 
