--- a/secciones/orders.html
+++ b/secciones/orders.html
@@ -5,10 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Orders</title>
+    <meta name="author" content="Jimmy sebastian higa ramirez">
+    <meta name="description" content="gestor de envios">
+    <meta name="keywords" content="envios,gestor de envios,como hago mi envio, orden de compra">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/tienda.css">
     <link rel="icon" href="../img/icono.jpg">
-    <title>Orders</title>
+   
 </head>
 
 <body>
@@ -19,7 +23,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="../index.html">
-            <img class="iconos" src="../img/inicio.png" alt="">
+            <img class="iconos" src="../img/inicio.png" alt="boton para ir al inicio">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -80,35 +84,44 @@
             </div>
            <div>
             <textarea placeholder="Nota para el repartidor" class="repartidor border"></textarea>
-            <input type="submit" value="enviar" class="textarea form fontCopy" > 
+            <input type="submit" value="enviar" class="textarea boton" > 
         </div>
 
 
             <div class="input-order"> Quisieras recibir notificaciones de las ultimas ofertas y novedades
                 <input type="checkbox" name="acepta" value="1"></div>
             <div class="formulario" >
-            <input type="submit" value="realizar envio" class="form fontCopy">
-            <input type="reset" value="cancelar envio"  class="form fontCopy">
+            <input type="submit" value="realizar envio" class="boton fontCopy">
+            <input type="reset" value="cancelar envio"  class="boton fontCopy">
             </div>
         </form>
     </main>
-    <footer class="back-color">
-        <div class="sociales">
-            <img src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" alt="icon instagram">
+    <footer>
 
-            <img src="https://img.icons8.com/fluency/48/undefined/twitter.png" />
+      <div class="social-container">
+        <a href="https://www.instagram.com/" target="_blank">
+          <img class="ig" src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" alt="icono instagram" title="instagram">        
+        </a>
+        <a href="https://twitter.com/" target="_blank">
+          <img src="https://img.icons8.com/fluency/48/undefined/twitter.png" alt="icono twitter" title="twitter"/>
+        </a>
+        <a href="https://www.youtube.com/" target="_blank">
+          <img src="https://img.icons8.com/fluency/48/000000/youtube-play.png" alt="icono youtube" title="youtube"/>
+        </a>
+      </div>
+          <h3 class="copyr">©2022 StorePC</h3>
+      <div>
+        <a href="#" target="_blank">
+          <img  src="https://img.icons8.com/color/48/000000/visa.png" alt="visa" title="visa">
+        </a>
+
+        <a href="#" target="_blank">
+          <img  src="https://img.icons8.com/color/48/000000/mastercard.png" alt="mastercard" title="mastercard">
+        </a>
+        <a href="#" target="_blank">
+          <img  src="https://img.icons8.com/color/48/000000/mercado-pago.png" alt="mercado-pago" title="mercado-pago">
+        </a>       
         </div>
-        <p class="fontCopy copyr">©2022 StorePC</p>
-        <div>
-            <img class="pago" src="https://img.icons8.com/fluency/48/000000/paypal.png">
-
-            <img class="pago" src="https://img.icons8.com/color/48/000000/visa.png">
-
-            <img class="pago" src="https://img.icons8.com/color/48/000000/mastercard.png">
-
-            <img class="pago" src="https://img.icons8.com/color/48/000000/mercado-pago.png">
-        </div>
-
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
