optimizacion de imagenes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             </div>
 
 
-            <img class="foto-referencia" src="./img/gamers.jpg" alt="Componentes de pc" title="pc gaming">
+            <img class="foto-referencia" src="./img/gamers.webp" alt="Componentes de pc" title="pc gaming">
 
         </section>
 
@@ -74,13 +74,13 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="./img/novedades4.jpg" class="d-block ofoto  w-100" alt="imagen de un gabinete por dentro">
+                <img src="./img/novedades4.webp" class="d-block ofoto  w-100" alt="imagen de un gabinete por dentro">
               </div>
               <div class="carousel-item">
-                <img src="./img/novedades5.jpg" class="d-block ofoto w-100" alt="tarjetas graficas">
+                <img src="./img/novedades5.webp" class="d-block ofoto w-100" alt="tarjetas graficas">
               </div>
               <div class="carousel-item">
-                <img src="./img/novedades6.jpg" class="d-block ofoto w-100" alt="monitor con una imagen de destiny en su interior">
+                <img src="./img/novedades6.webp" class="d-block ofoto w-100" alt="monitor con una imagen de destiny en su interior">
               </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -99,19 +99,19 @@
        <div class="contenido-container">
          
          <div>
-         <img class="prod-foto" src="./img/Ofertas.jpg" alt="imagen del interior de una gabinete">
+         <img class="prod-foto" src="./img/oferta.webp" alt="imagen del interior de una gabinete">
          </div>
 
          <div>
-         <img class="prod-foto"  src="./img/ofertas2.jpg" alt="imagen de un portatil gamer">
+         <img class="prod-foto"  src="./img/portatil-gaming-asus-tuf-gaming-f15.webp" alt="imagen de un portatil gamer">
          </div>
 
          <div>
-         <img class="prod-foto"  src="./img/ofertas3.jpg" alt="imagen de una grafica gtx">
+         <img class="prod-foto"  src="./img/grafica.webp" alt="imagen de una grafica gtx">
          </div>
 
          <div>
-         <img class="prod-foto"  src="./img/ofertas4.jpg" alt="imagen de un setup completo y un portatil">
+         <img class="prod-foto"  src="./img/setupmini.webp" alt="imagen de un setup completo y un portatil">
          </div>
 
        </div>  
