--- a/secciones/Products.html
+++ b/secciones/Products.html
@@ -48,7 +48,7 @@
         </nav>
         <div>
             <div class="global-banner ">
-                <img class="global-foto" src="../img/zonegaming.jpg" alt="imagen de una mano sobre un teclado">
+                <img class="global-foto" src="../img/zonegaming.webp" alt="imagen de una mano sobre un teclado">
             </div>
            
             <h2 class="global-title ">Products</h2>
@@ -67,13 +67,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/3090.jpg" class="d-block ofoto  w-100" alt="imagen de una grafica gtx 3090 ">
+                    <img src="../img/3090.webp" class="d-block ofoto  w-100" alt="imagen de una grafica gtx 3090 ">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/mother.jpg" class="d-block ofoto w-100" alt="imagen de una motherboard">
+                    <img src="../img/mother.webp" class="d-block ofoto w-100" alt="imagen de una motherboard">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/pantalla.jpg" class="d-block ofoto w-100" alt="imagen de una pantalla de alta resolucion">
+                    <img src="../img/pantalla.webp" class="d-block ofoto w-100" alt="imagen de una pantalla de alta resolucion">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -91,19 +91,19 @@
            <div class="contenido-container">
              
              <div>
-             <img class="prod-foto" src="../img/Perisfericos1.jpg" alt="imagen en la cual hay  un teclado, mouse ,auriculares y un joystick">
+             <img class="prod-foto" src="../img/mouse.webp" alt="mouse gaming">
              </div>
  
              <div>
-             <img class="prod-foto"  src="../img/Perisfericos2.jpg" alt="imagen en la que hay un teclado , mouse y auriculares">
+             <img class="prod-foto"  src="../img/teclado.webp" alt="teclado gaming">
              </div>
  
              <div>
-             <img class="prod-foto"  src="../img/perisfericos3.jpg" alt="imagen en la que hay un teclado, mouse y un auricular hyperx">
+             <img class="prod-foto"  src="../img/perisfericos.webp" alt="imagen en la cual hay  un teclado, mouse ,auriculares y un joystick">
              </div>
  
              <div>
-             <img class="prod-foto"  src="../img/perisfericos4.jpg" alt="imagen de un setup gaming">
+             <img class="prod-foto"  src="../img/setup.webp" alt="imagen de un setup gaming">
              </div>
  
            </div>  
