--- a/secciones/giftCard.html
+++ b/secciones/giftCard.html
@@ -47,7 +47,7 @@
       </nav>
       <div>
         <div class="global-banner ">
-            <img class="global-foto" src="../img/gift.jpg" alt="">
+            <img class="global-foto" src="../img/gift.webp" alt="">
         </div>
         <h2 class="global-title">Gift Card</h2>
 
@@ -64,13 +64,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/valorant3.jpg" class="d-block  valorantFoto w-100" alt="imagen referencia a la venta de giftCard de valorant">
+                    <img src="../img/valorant3.webp" class="d-block  valorantFoto w-100" alt="imagen referencia a la venta de giftCard de valorant">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/valorant2.jpg" class="d-block valorantFoto w-100" alt="valorant points giftCard">
+                    <img src="../img/valorant2.webp" class="d-block valorantFoto w-100" alt="valorant points giftCard">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/valorant.jpg" class="d-block valorantFoto w-100" alt="valorant points giftCard">
+                    <img src="../img/valorant2.webp" class="d-block valorantFoto w-100" alt="valorant points giftCard">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -87,27 +87,27 @@
            <div class="valorant-container">
              
              <div>
-             <img class="valorantFoto" src="../img/gif.jpg" alt="gifcard valorant 25$">
+             <img class="valorantFoto" src="../img/gif.webp" alt="gifcard valorant 25$">
              </div>
  
              <div>
-             <img class="valorantFoto"  src="../img/gif2.jpg" alt="gifcard valorant 10$">
+             <img class="valorantFoto"  src="../img/gif2.webp" alt="gifcard valorant 10$">
              </div>
  
              <div>
-             <img class="valorantFoto"  src="../img/gif3.jpg" alt="gifcard valorant 30$">
+             <img class="valorantFoto"  src="../img/gif3.webp" alt="gifcard valorant 30$">
              </div>
  
              <div>
-             <img class="valorantFoto"  src="../img/gif4.jpg" alt="gifcard valorant 50$">
+             <img class="valorantFoto"  src="../img/gif4.webp" alt="gifcard valorant 50$">
              </div>
 
              <div>
-              <img class="valorantFoto"  src="../img/gif5.jpg" alt="gifcard valorant 50$">
+              <img class="valorantFoto"  src="../img/gif5.webp" alt="gifcard valorant 50$">
               </div>
 
               <div>
-                <img class="valorantFoto"  src="../img/gif6.jpg" alt="gifcard valorant 100$">
+                <img class="valorantFoto"  src="../img/gif6.webp" alt="gifcard valorant 100$">
                 </div>
  
            </div>  
