--- a/secciones/funkoWorld.html
+++ b/secciones/funkoWorld.html
@@ -49,7 +49,7 @@
       </nav>
       <div>
             <div class="global-banner ">
-                <img class="global-foto" src="../img/funkos.jpg" alt="imagen de funkos de diferentes tematicas">
+                <img class="global-foto" src="../img/funkos.webp" alt="imagen de funkos de diferentes tematicas">
             </div>
             <h2 class="global-title">Funkos World</h2>
 
@@ -66,13 +66,13 @@
                 </div>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="../img/marvel.jpg" class="d-block ofoto  w-100" alt="funko de flash">
+                    <img src="../img/marvel.webp" class="d-block ofoto  w-100" alt="funko de flash">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/marvel1.jpg" class="d-block ofoto w-100" alt="funko de robin">
+                    <img src="../img/marvel1.webp" class="d-block ofoto w-100" alt="funko de robin">
                   </div>
                   <div class="carousel-item">
-                    <img src="../img/marvel2.jpg" class="d-block ofoto w-100" alt="funko de deadpool">
+                    <img src="../img/marvel2.webp" class="d-block ofoto w-100" alt="funko de deadpool">
                   </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -90,19 +90,19 @@
            <div class="contenido-container">
              
              <div>
-             <img class="prod-foto" src="../img/kimet.jpg" alt="funko giyu tomioka">
+             <img class="prod-foto" src="../img/kimet.webp" alt="funko giyu tomioka">
              </div>
  
              <div>
-             <img class="prod-foto"  src="../img/kimet2.jpg" alt="funko muzan kibutsuji ">
+             <img class="prod-foto"  src="../img/kimet2.webp" alt="funko muzan kibutsuji ">
              </div>
  
              <div>
-             <img class="prod-foto"  src="../img/kimet3.jpg" alt="funko nezuko">
+             <img class="prod-foto"  src="../img/kimet3.webp" alt="funko nezuko">
              </div>
  
              <div>
-             <img class="prod-foto"  src="../img/kimet4.jpg" alt="funko tanjiro">
+             <img class="prod-foto"  src="../img/kimet4.webp" alt="funko tanjiro">
              </div>
  
            </div>  
