cambios en diseño y en una seccion exactamente en la de giftcard por la de csgo

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="./secciones/Products.html">Productos</a>
           </li>
           <li class="nav-item">
@@ -47,25 +50,20 @@
     </div>
   </nav>
 
-
   <main>
-
     <section class="info">
       <div>
-        <h2 class="subtt">nosotros</h2>
+        <h2 class="subtt">Sobre Nosotros</h2>
         <p class="nosotros">
           Somos una empresa fundada en el año 2021.
           Nuestro objetivo es traer los ultimos avances en hardware para el mundo del gaming.
           Ofreciendo una gran variedad de productos , marcas y los mejores precios del pais.
         </p>
       </div>
-
-
       <img class="foto-referencia" src="./img/gamers.webp" alt="Componentes de pc" title="pc gaming">
-
     </section>
 
-    <section class="caro">
+    <section class="estiloDeContenedores">
       <div id="carouselExampleIndicators" class="carousel slide " data-bs-ride="carousel">
         <h2 class="articulos-titulo ">Novedades</h2>
         <div class="carousel-indicators">
@@ -99,14 +97,9 @@
         </button>
     </section>
 
-
-
-    <section class="caro">
+    <section class="estiloDeContenedores">
       <h2 class="articulos-titulo">ofertas</h2>
-
       <div class="contenido-container">
-
-
         <div class="card-product">
           <div>
             <img class="prod-foto" src="./img/oferta.webp" alt="imagen del interior de una gabinete">
@@ -115,7 +108,6 @@
             <a href="./secciones/orders.html" class="buy">comprar</a>
           </div>
         </div>
-
 
         <div class="card-product">
           <div>
@@ -126,7 +118,6 @@
             <a href="./secciones/orders.html" class="buy">comprar</a>
           </div>
         </div>
-
 
         <div class="card-product">
           <div>
@@ -137,7 +128,6 @@
           </div>
         </div>
 
-
         <div class="card-product">
           <div>
             <img class="prod-foto" src="./img/setupmini.webp" alt="imagen de un setup completo y un portatil">
@@ -147,33 +137,25 @@
           </div>
         </div>
 
-
         <div class="card-product">
           <div>
-            <img class="prod-foto" src="./img/oferta.webp" alt="imagen del interior de una gabinete">
+            <img class="prod-foto" src="./img/inicio.webp" alt="imagen del interior de una gabinete">
           </div>
           <div class="boton">
             <a href="./secciones/orders.html" class="buy">comprar</a>
           </div>
         </div>
 
-
         <div class="card-product">
           <div>
-            <img class="prod-foto" src="./img/portatil-gaming-asus-tuf-gaming-f15.webp"
-              alt="imagen de un portatil gamer">
+            <img class="prod-foto" src="./img/mother2.webp" alt="mother msi">
           </div>
           <div class="boton">
             <a href="./secciones/orders.html" class="buy">comprar</a>
           </div>
         </div>
-
       </div>
-
-
     </section>
-
-
   </main>
 
   <footer>
@@ -202,7 +184,6 @@
         <img src="https://img.icons8.com/color/48/000000/mercado-pago.png" alt="mercado-pago" title="mercado-pago">
       </a>
     </div>
-
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
