--- a/secciones/Products.html
+++ b/secciones/Products.html
@@ -33,6 +33,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="Products.html">Productos</a>
           </li>
           <li class="nav-item">
@@ -48,18 +51,18 @@
       </div>
     </div>
   </nav>
+  
   <div>
     <div class="global-banner ">
       <img class="global-foto" src="../img/zonegaming.webp" alt="imagen de una mano sobre un teclado">
     </div>
-
     <h2 class="global-title ">Productos</h2>
-
+</div>
 
     <main>
-      <section class="caro">
+      <section class="estiloDeContenedores">
         <div id="carouselExampleIndicators" class="carousel slide " data-bs-ride="carousel">
-          <h2 class="titleProduct-global">Componentes</h2>
+          <h2 class="tituloDeCarrousel">Componentes</h2>
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -92,8 +95,8 @@
           </button>
       </section>
 
-      <section class="caro">
-        <h2 class="titleProduct-global">Perisfericos</h2>
+      <section class="estiloDeContenedores">
+        <h2 class="tituloDeCarrousel">Perisfericos</h2>
 
         <div class="contenido-container">
 
@@ -121,8 +124,7 @@
 
           <div class="card-product">
             <div>
-              <img class="prod-foto" src="../img/perisfericos.webp"
-                alt="imagen en la cual hay  un teclado, mouse ,auriculares y un joystick">
+              <img class="prod-foto" src="../img/perisfericos.webp"alt="imagen en la cual hay  un teclado, mouse ,auriculares y un joystick">
             </div>
             <div class="boton">
               <a href="orders.html" class="buy">
@@ -144,8 +146,7 @@
 
           <div class="card-product">
             <div>
-              <img class="prod-foto" src="../img/perisfericos.webp"
-                alt="imagen en la cual hay  un teclado, mouse ,auriculares y un joystick">
+              <img class="prod-foto" src="../img/perisfericos2.webp"alt="imagen en la cual hay  un teclado">
             </div>
             <div class="boton">
               <a href="orders.html" class="buy">
@@ -156,7 +157,7 @@
 
           <div class="card-product">
             <div>
-              <img class="prod-foto" src="../img/setup.webp" alt="imagen de un setup gaming">
+              <img class="prod-foto" src="../img/perisfericos3.webp" alt="auriculares aureox">
             </div>
             <div class="boton">
               <a href="orders.html" class="buy">
@@ -164,11 +165,10 @@
               </a>
             </div>
           </div>
-
         </div>
       </section>
-
     </main>
+    
     <footer>
       <div class="social-container">
         <a href="https://www.instagram.com/" target="_blank" class="deco">
