--- a/secciones/orders.html
+++ b/secciones/orders.html
@@ -20,7 +20,6 @@
   <header class="encabezado">
     <h1 class="title">Store Pc</h1>
   </header>
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="icono" href="../index.html">
@@ -32,6 +31,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="Products.html">Productos</a>
           </li>
@@ -49,7 +51,6 @@
     </div>
   </nav>
   <main>
-
     <form action="#" class="orders">
 
       <input type="text" placeholder="Ingrese su nombre" class="input-order border">
@@ -100,8 +101,8 @@
       </div>
     </form>
   </main>
+  
   <footer>
-
     <div class="social-container">
       <a href="https://www.instagram.com/" target="_blank" class="deco">
         <img class="ig" src="https://img.icons8.com/color/48/000000/instagram-new--v1.png" alt="icono instagram"
