--- a/secciones/skinsCounter.html
+++ b/secciones/skinsCounter.html
@@ -33,6 +33,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="Products.html">Productos</a>
           </li>
           <li class="nav-item">
@@ -53,13 +56,11 @@
       <img class="global-foto" src="../img/csgo.webp" alt="imagen de una arma del juego counter strike">
     </div>
     <h2 class="global-title">Csgo Skins</h2>
-
-
+  </div>
     <main>
-
-      <section class="caro">
+      <section class="estiloDeContenedores">
         <div id="carouselExampleIndicators" class="carousel slide " data-bs-ride="carousel">
-          <h2 class="titleProduct-global">Counter Strike</h2>
+          <h2 class="tituloDeCarrousel">Counter Strike</h2>
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -94,8 +95,8 @@
           </button>
       </section>
 
-      <section class="caro">
-        <h2 class="titleProduct-global">Counter Strike Skins</h2>
+      <section class="estiloDeContenedores">
+        <h2 class="tituloDeCarrousel">Counter Strike Skins</h2>
         <div class="contenido-container">
 
           <div class="card-product">
@@ -163,12 +164,10 @@
               </a>
             </div>
           </div>
-
         </div>
       </section>
-
-
     </main>
+
     <footer>
       <div class="social-container">
         <a href="https://www.instagram.com/" target="_blank" class="deco">
