--- a/secciones/funkoWorld.html
+++ b/secciones/funkoWorld.html
@@ -33,6 +33,9 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="Products.html">Productos</a>
           </li>
           <li class="nav-item">
@@ -54,13 +57,11 @@
       <img class="global-foto" src="../img/funkos.webp" alt="imagen de funkos de diferentes tematicas">
     </div>
     <h2 class="global-title">Mundo Funko</h2>
-
+    </div>
     <main>
-
-
-      <section class="caro">
+      <section class="estiloDeContenedores">
         <div id="carouselExampleIndicators" class="carousel slide " data-bs-ride="carousel">
-          <h2 class="titleProduct-global">Marvel</h2>
+          <h2 class="tituloDeCarrousel">Marvel</h2>
           <div class="carousel-indicators">
             <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
               aria-current="true" aria-label="Slide 1"></button>
@@ -92,8 +93,8 @@
           </button>
       </section>
 
-      <section class="caro">
-        <h2 class="titleProduct-global">kimetsu no yaiba</h2>
+      <section class="estiloDeContenedores">
+        <h2 class="tituloDeCarrousel">kimetsu no yaiba</h2>
         <div class="contenido-container">
           <div class="card-product">
             <div>
@@ -141,7 +142,7 @@
 
           <div class="card-product">
             <div>
-              <img class="prod-foto" src="../img/kimet4.webp" alt="funko tanjiro">
+              <img class="prod-foto" src="../img/kimet5.webp" alt="funko tanjiro">
             </div>
             <div class="boton">
               <a href="orders.html" class="buy">
@@ -152,7 +153,7 @@
 
           <div class="card-product">
             <div>
-              <img class="prod-foto" src="../img/kimet4.webp" alt="funko tanjiro">
+              <img class="prod-foto" src="../img/kimet6.webp" alt="funko tanjiro">
             </div>
             <div class="boton">
               <a href="orders.html" class="buy">
@@ -161,11 +162,9 @@
             </div>
           </div>
         </div>
-
       </section>
-
-
     </main>
+
     <footer>
       <div class="social-container">
         <a href="https://www.instagram.com/" target="_blank" class="deco">
@@ -184,7 +183,6 @@
         <a href="#" target="_blank" class="deco">
           <img src="https://img.icons8.com/color/48/000000/visa.png" alt="visa" title="visa">
         </a>
-
         <a href="#" target="_blank" class="deco">
           <img src="https://img.icons8.com/color/48/000000/mastercard.png" alt="mastercard" title="mastercard">
         </a>
@@ -193,7 +191,6 @@
         </a>
       </div>
     </footer>
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous">
     </script>
